# Coverage-Path-Planning

./: README.md
coverage_robot/: CMakeLists.txt  package.xml  setup.py
coverage_robot/launch/: coverage_planning.launch  gazebo.launch  turtlebot3_slam.launch
coverage_robot/rviz/: turtlebot3_navigation.rviz
coverage_robot/scripts/: coverage_path_planner.py  goal_publisher.py
coverage_robot/worlds/: my_world_big.world
