<?xml version="1.0"?>
<package format="2">
  <name>coverage_robot</name>
  <version>0.0.0</version>
  <description>The coverage_robot package</description>

  <maintainer email="user@todo.todo">TODO: Maintainer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-setuptools</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>explore_lite</build_depend>
  <build_depend>slam_karto</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>map_server</build_depend>
  
  <exec_depend>map_server</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>amcl</exec_depend>
  
  
  

  <export>
  </export>
</package>

